--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,83 @@
 // Import all of Boosted's CSS
 @import "~boosted/scss/orange-helvetica";
-@import "~boosted/scss/boosted";
+//@import "~boosted/scss/boosted";
+
+// Custom.scss
+// Option B: Include parts of Bootstrap
+@import "~boosted/scss/mixins/banner";
+
+// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
+@import "~boosted/scss/functions";
+
+// 2. Include any default variable overrides here
+
+
+// 3. Include remainder of required Boosted stylesheets
+@import "~boosted/scss/variables";
+@import "~boosted/scss/maps";
+@import "~boosted/scss/mixins";
+@import "~boosted/scss/root";
+
+// Required Boosted imports
+@import "../node_modules/boosted/scss/variables";
+@import "../node_modules/boosted/scss/maps";
+@import "../node_modules/boosted/scss/mixins";
+@import "../node_modules/boosted/scss/root";
+
+
+// 4. Include any optional Bootstrap components as you like
+@import "~boosted/scss/utilities";
+@import "~boosted/scss/reboot";
+@import "~boosted/scss/type";
+
+@import "~boosted/scss/images";
+@import "~boosted/scss/containers";
+@import "~boosted/scss/grid";
+@import "~boosted/scss/tables";
+@import "~boosted/scss/forms";
+@import "~boosted/scss/card";
+
+@import "~boosted/scss/buttons";
+@import "~boosted/scss/button-group";
+
+@import "~boosted/scss/transitions";
+@import "~boosted/scss/dropdown";
+
+
+@import "~boosted/scss/nav";
+@import "~boosted/scss/navbar";
+
+// Boosted
+
+@import "~boosted/scss/footer";
+@import "~boosted/scss/orange-navbar";
+@import "~boosted/scss/stepped-process";
+@import "~boosted/scss/sticker";
+@import "~boosted/scss/title-bars";
+
+// Helpers
+@import "~boosted/scss/helpers";
+
+
+// Utilities
+@import "~boosted/scss/utilities/api";
+
+// 5. Add additional custom code here
+o-title-bar h1 {
+    --bs-title-bar-padding-y:0; 
+}
+
+.footer-fixed {
+    // POSITION
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    // COLOR
+    background-color: #000;
+    color: #fff;
+    // ...
+    margin-top: 0!important;
+    padding: 0.2rem;
+    z-index: 1000;
+}
