Améliorations diverses (layout, store ...)

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -32,6 +32,8 @@ $tag-active-decoration-color: $accessible-orange;
 @import '~boosted/scss/forms';
 @import '~boosted/scss/tags';
 @import '~boosted/scss/card';
+@import '~boosted/scss/toasts';
+@import '~boosted/scss/pagination';
 
 @import '~boosted/scss/buttons';
 @import '~boosted/scss/button-group';
