--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,20 +1,13 @@
 // Import all of Boosted's CSS
-@import '~boosted/scss/orange-helvetica';
+@import '/node_modules/boosted/scss/orange-helvetica';
 //@import "~boosted/scss/boosted";
 
 // Custom.scss
-// Option B: Include parts of Bootstrap
+
 @import '~boosted/scss/mixins/banner';
+@import './variables.scss';
 
-// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import '~boosted/scss/functions';
 
-// 2. Include any default variable overrides here
-$tag-active-decoration-color: $accessible-orange;
-// End mod
-
-// 3. Include remainder of required Boosted stylesheets
-@import '~boosted/scss/variables';
 @import '~boosted/scss/maps';
 @import '~boosted/scss/mixins';
 @import '~boosted/scss/root';
