prise en main ssr

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -83,3 +83,7 @@ h2::after {
 	padding: 0.2rem;
 	z-index: 1000;
 }
+
+// .navbar-nav .nav-link.active {
+// 	--bs-navbar-active-color: #d31414;
+// }
